# minions

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/: app.py  deps.py  routes.py
cli/: main.py
common/: config.py  models.py  redis_client.py
containers/: Dockerfile.agent  entrypoint.sh
dashboard/: app.py
docs/plans/: 2026-03-02-claude-cli-agent-integration-design.md  2026-03-02-claude-cli-agent-integration.md  2026-03-02-minions-design.md
monitoring/: __init__.py  metrics.py  prometheus.yml
monitoring/grafana/: dashboard.json
prefetcher/: collect.py  git_context.py  scanner.py  search.py
tests/: conftest.py  test_api.py  test_cli.py  test_compose.py  test_config.py  test_container_manager.py  test_containers.py  test_dashboard.py  test_metrics.py  test_models.py  test_pipeline.py  test_prefetcher.py  test_readme.py  test_redis_client.py  test_worker_main.py
worker/: container_manager.py  main.py  pipeline.py  run.py
