[project]
name = "minions"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "redis>=5.2.0",
    "docker>=7.1.0",
    "typer>=0.15.0",
    "httpx>=0.28.0",
    "streamlit>=1.41.0",
    "prometheus-client>=0.22.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "rich>=13.9.0",
]

[tool.setuptools.packages.find]
include = ["api*", "worker*", "prefetcher*", "dashboard*", "cli*", "common*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
    "fakeredis>=2.26.0",
    "respx>=0.22.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
minion = "cli.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["integration: marks tests requiring running services"]

[tool.ruff]
line-length = 99
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]
